fix bug AnimeJs

--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
 <!--? ----------------------------------------------------------------------- -->
 <div class="">
 <!--! source Code-->
-<div class="relative div flex z-50 justify-center">
+<!-- <div class="relative div flex z-50 justify-center">
    <div id="innerSourceCodeAnimeJs" class="relative flex p-2   w-3/4 h-42 z-10 animate__animated animate__zoomInDown bg-slate-200/30 border-8 ring ring-rose-500  border-double">
     <div class="w-2/4 p-2 bg-rose-600/20 text-white h-auto">
        <h2 class="text-white"><<span class="text-yellow-600">div</span> <span class="text-yellow-400"> class=</span>"<span class="text-green-700">function-based-params-demo</span>"> 
@@ -212,11 +212,12 @@
      <span class="text-blue-600">}</span> }); </pre>
     </div>
      </div>
-  </div>
+  </div> -->
 
 <!--! source Code-->
 
 <!--!  title sourceCode -->
+<div class="w-full h-96">
 <div class="mb-1">
    <div class="flex mb-4 justify-center">
       <div class=" ring-lime-50  border bg-gradient-to-r from-red-600/5 via-red-600/20 to-red-600/5  hover:from-red-600/20 hover:via-red-600/5 hover:to-red-600/20 p-2 border-dotted bg-red-400/5 border-red-300">
@@ -226,7 +227,7 @@
 </div>
 
 <!--!  title sourceCode -->
-<div class="relative flex justify-center divMenuAnimeJs">
+<div class=" flex justify-center divMenuAnimeJs">
    <div class="absolute w-2/4 h-42 flex divAnimateJs animate__animated">
       <svg viewBox="100 0 245 100" xmlns="http://www.w3.org/2000/svg">
          <defs></defs>
@@ -240,9 +241,11 @@
 <!--TODO ----------------------- TheEnd_svgAnimeJsMove --------------------- -->
 <!--? ----------------------------------------------------------------------- -->
 </div>
-
-
-   <div id="divAll" class="relative  mt-52 bg-white bg-opacity-10 border border-dashed border-white overflow-x-auto px-10 py-10 snap-x flex gap-4 w-full h-54">
+</div>
+ <!--? ----------------------------------------------------------------------- -->
+<!--TODO ----------------------- start_Sample_move_AnimeJs --------------------- -->
+<!--? ----------------------------------------------------------------------- -->
+   <div id="divAll" class="   bg-white bg-opacity-10 border border-dashed border-white overflow-x-auto px-10 py-10 snap-x flex gap-4 w-full h-54">
       <div class="snap-center  shrink-0">
       </div>
       <div class="snap-center shrink-0">
@@ -280,7 +283,9 @@
          <div class="menuAnimeJs w-80 h-40 rounded-lg shadow-xl  shrink-0  bg-white"></div>
       </div>
     </div>
-
+ <!--? ----------------------------------------------------------------------- -->
+<!--TODO ----------------------- TheEnd_Sample_move_AnimeJs --------------------- -->
+<!--? ----------------------------------------------------------------------- -->
 
 
     
