fix bug menu AnimeJs create sample

--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
  <!--? ----------------------------------------------------------------------- -->
 <!--TODO ----------------------- start_Sample_move_AnimeJs --------------------- -->
 <!--? ----------------------------------------------------------------------- -->
-   <div id="divAll" class="   bg-white bg-opacity-10 border border-dashed border-white overflow-x-auto px-10 py-10 snap-x flex gap-4 w-full h-54">
+   <div id="divAll" class="bg-white bg-opacity-10 border border-dashed border-white overflow-x-auto px-10 py-10 snap-x flex gap-4 w-full h-54">
       <div class="snap-center  shrink-0">
       </div>
       <div class="snap-center shrink-0">
@@ -270,9 +270,13 @@
        </div>
       </div>
       </div>
-      <div class=" snap-center shrink-0">
+      <div id="animejs-3" class="snap-center shrink-0">
 
-         <div class="menuAnimeJs w-80 h-40 rounded-lg shadow-xl  shrink-0  bg-yellow-400"></div>
+         <div class="menuAnimeJs w-80 h-40  flex items-center rounded-lg shadow-xl  shrink-0  bg-yellow-400">
+           
+            <div class="w-3/4 mx-auto h-28 css-transforms-demo flex bg-red-50/30 rounded-md"><div class="w-8 h-8 bg-white self-center rounded-full  el"></div></div>
+                  
+         </div>
       </div>
       <div class="snap-center ...">
 
