create_sample_animateJs

--- a/index.html
+++ b/index.html
@@ -270,6 +270,8 @@
        </div>
       </div>
       </div>
+
+      <!-- anime-js-3 -->
       <div id="animejs-3" class="snap-center shrink-0">
 
          <div class="menuAnimeJs w-80 h-40  flex items-center rounded-lg shadow-xl  shrink-0  bg-yellow-400">
@@ -278,9 +280,20 @@
                   
          </div>
       </div>
-      <div class="snap-center ...">
 
-         <div class="menuAnimeJs w-80 h-40 rounded-lg shadow-xl  shrink-0  bg-green-400"></div>
+      <!-- anime-js-4 -->
+      <div id="animejs-4" class="snap-center ...">
+
+         <div class="menuAnimeJs flex items-center  justify-center w-80 h-40 rounded-lg shadow-xl  shrink-0  bg-green-400">
+            <div class="motion-path-demo">
+            <div class="motion-path">
+                 <div class="w-5 h-5 bg-white el follow-path"></div>
+                 <svg  width="256" height="112" viewBox="0 0 256 112">
+                   <path fill="none" stroke="currentColor" stroke-width="1" d="M8,56 C8,33.90861 25.90861,16 48,16 C70.09139,16 88,33.90861 88,56 C88,78.09139 105.90861,92 128,92 C150.09139,92 160,72 160,56 C160,40 148,24 128,24 C108,24 96,40 96,56 C96,72 105.90861,92 128,92 C154,93 168,78 168,56 C168,33.90861 185.90861,16 208,16 C230.09139,16 248,33.90861 248,56 C248,78.09139 230.09139,96 208,96 L48,96 C25.90861,96 8,78.09139 8,56 Z"/>
+                 </svg>
+             </div>
+            </div>
+         </div>
       </div>
       <div class="snap-center ...">
 
@@ -291,47 +304,48 @@
 <!--TODO ----------------------- TheEnd_Sample_move_AnimeJs --------------------- -->
 <!--? ----------------------------------------------------------------------- -->
 
-
-    
-
+-  
+ <script>
+ 
+ </script>
 <!-- 
     ///===========
 
 //====
-    <div id="menuCodeAnimeJs" class="flex justify-center">
-      <div class="w-10 h-4 bg-slate-50"></div>
- <div class="relative flex bottom-56 w-3/4 h-52 animate__animated animate__zoomInDown bg-slate-200/30 border-8 ring ring-rose-500  border-double">
+//     <div id="menuCodeAnimeJs" class="flex justify-center">
+//       <div class="w-10 h-4 bg-slate-50"></div>
+//  <div class="relative flex bottom-56 w-3/4 h-52 animate__animated animate__zoomInDown bg-slate-200/30 border-8 ring ring-rose-500  border-double">
 
-   <div id="titleCode" class="flex justify-start mt-12">
-      <div class=" ring-lime-50  border bg-gradient-to-r from-red-600/5 via-red-600/20 to-red-600/5  hover:from-red-600/20 hover:via-red-600/5 hover:to-red-600/20 p-2 border-dotted bg-red-400/5 border-red-300">
-         <h1 class="text-red-600 text-3xl font-body">list move animation</h1>
-      </div>
-   </div>
+//    <div id="titleCode" class="flex justify-start mt-12">
+//       <div class=" ring-lime-50  border bg-gradient-to-r from-red-600/5 via-red-600/20 to-red-600/5  hover:from-red-600/20 hover:via-red-600/5 hover:to-red-600/20 p-2 border-dotted bg-red-400/5 border-red-300">
+//          <h1 class="text-red-600 text-3xl font-body">list move animation</h1>
+//       </div>
+//    </div>
 
-<div class="w-2/4  bg-rose-600/80 text-white h-auto">
-   <h2 class="text-white"><<span class="text-yellow-600">div</span> <span class="text-yellow-400"> class=</span>"<span class="text-green-700">function-based-params-demo</span>"> 
-      <h2 class="text-white"><<span class="text-yellow-600">div</span> <span class="text-yellow-400"> class=</span>"<span class="text-green-700">el</span>">   <<span class="text-yellow-600">/div</span>></h2>
-      <h2 class="text-white"><<span class="text-yellow-600">div</span> <span class="text-yellow-400"> class=</span>"<span class="text-green-700">el</span>"> 
-         <<span class="text-yellow-600">/div</span>></h2>
-      <<span class="text-yellow-600">/div</span>></h2>
-</div>
-<div class="w-2/4 bg-rose-600/80 text-xs h-auto">
-   <pre><span class="text-blue-800">anime</span>({
- <span class="text-green-600"> targets:</span> <span class="text-yellow-400">'.function-based-params-demo .el'</span>,
- <span class="text-green-600">translateX:</span><span class="text-yellow-400"> 270,</span>
- <span class="text-green-600">direction:</span> <span class="text-yellow-400">'alternate',</span>
- <span class="text-green-600">loop:</span><span class="text-yellow-400"> true,</span>
- <span class="text-blue-600">delay:</span> <span class="text-yellow-400">function(el, i, l) {</span>
-  <span class="text-green-600"></span><span class="text-purple-700"> return</span> i * 100;
- <span class="text-yellow-400">},</span>
- <span class="text-blue-600">endDelay:</span><span class="text-yellow-400">function(el, i, l) {</span>
-  <span class="text-purple-700"> return</span> (l - i) * 100;
- <span class="text-blue-600">}</span>
-   }); </pre>
-</div> -->
+// <div class="w-2/4  bg-rose-600/80 text-white h-auto">
+//    <h2 class="text-white"><<span class="text-yellow-600">div</span> <span class="text-yellow-400"> class=</span>"<span class="text-green-700">function-based-params-demo</span>"> 
+//       <h2 class="text-white"><<span class="text-yellow-600">div</span> <span class="text-yellow-400"> class=</span>"<span class="text-green-700">el</span>">   <<span class="text-yellow-600">/div</span>></h2>
+//       <h2 class="text-white"><<span class="text-yellow-600">div</span> <span class="text-yellow-400"> class=</span>"<span class="text-green-700">el</span>"> 
+//          <<span class="text-yellow-600">/div</span>></h2>
+//       <<span class="text-yellow-600">/div</span>></h2>
+// </div>
+// <div class="w-2/4 bg-rose-600/80 text-xs h-auto">
+//    <pre><span class="text-blue-800">anime</span>({
+//  <span class="text-green-600"> targets:</span> <span class="text-yellow-400">'.function-based-params-demo .el'</span>,
+//  <span class="text-green-600">translateX:</span><span class="text-yellow-400"> 270,</span>
+//  <span class="text-green-600">direction:</span> <span class="text-yellow-400">'alternate',</span>
+//  <span class="text-green-600">loop:</span><span class="text-yellow-400"> true,</span>
+//  <span class="text-blue-600">delay:</span> <span class="text-yellow-400">function(el, i, l) {</span>
+//   <span class="text-green-600"></span><span class="text-purple-700"> return</span> i * 100;
+//  <span class="text-yellow-400">},</span>
+//  <span class="text-blue-600">endDelay:</span><span class="text-yellow-400">function(el, i, l) {</span>
+//   <span class="text-purple-700"> return</span> (l - i) * 100;
+//  <span class="text-blue-600">}</span>
+//    }); </pre>
+// </div> -->
 
-</div>
-</div>
+// </div>
+// </div>
 
   
 
