--- a/index.html
+++ b/index.html
@@ -856,14 +856,55 @@
          
    </div>
  </div>
+ </div>
  <!--? ----------------------------------------------------------------------- -->
 <!--TODO ----------------------- TheEnd_Sample_move_AnimeJs --------------------- -->
 <!--? ----------------------------------------------------------------------- -->
+<!--?----------------------------------------------------------------------- -->
+<!--*----------------------------- Start_mo.js ----------------------------- -->
+<!--?----------------------------------------------------------------------- -->
+<br>
+<br>
+<br>
+ <div class="w-full h-full flex justify-center bg-red-400 mt-20 ">
+<div class="w-5/6 h-full flex-col justify-center bg-red-300/20">
+<h1 class="text-center mt-5 text-white text-4xl">mo.js</h1>
+<div class="w-full h-40 flex justify-center mt-28 relative">
+  <div id="bouncyCircle" class="absolute justify-center  w-4  h-8" >k1</div>
+</div>
+
+
+
+
+<div class="w-full h-40 flex justify-center  relative">
+  <div id="circle" class="absolute justify-center  w-4  h-8" ></div>
+</div>
+
+
+
+<div class="w-full h-40 flex justify-center  relative">
+  <div id="test" class="absolute justify-center  w-4  h-8" >28</div>
+</div>
+
+
+
+</div>
+<div class="w-full h-80">3</div>
+<div>4</div>
+<div>5</div>
+<div>6</div>
+
+
+
+
+
+</div>
+</div>
+
+
+ </div>
  
--  
- <script>
- 
- </script>
+
 <!-- 
     ///===========
 
@@ -902,7 +943,7 @@
 
 
   
-
+<script src="https://cdn.jsdelivr.net/npm/@mojs/core"></script>
 <!--TODO ------------ library_animeJs ---------------- -->
 <script src="./node_modules/animejs/lib/anime.min.js"></script>
 <!--?----------------- TheEnd library -------------------- -->
