--- a/index.html
+++ b/index.html
@@ -866,33 +866,41 @@
 <br>
 <br>
 <br>
-<div class="w-full flex  justify-between">
-  <div id="moveMoJs" class="self-start text-4xl font-family  text-white" >test</div>
-<h1 id="titleMo.js" class="self-center text-5xl text-center p-5 font-bold text-green-700">Mo.js</h1>
-  <div id="moveMoJs2" class="self-start text-4xl font-family  text-white" >test</div>
+ <div class="w-full flex  justify-between">
+   <div id="moveMoJs" class="self-start text-4xl font-bold font-family  text-white" >==></div>
+   <h1 id="titleMo.js" class="self-center text-5xl text-center p-5 font-bold text-green-700">Mo.js</h1>
+   <div id="moveMoJs2" class="self-start text-4xl font-bold font-family  text-white" ><==</div>
+ </div>
+
+
+
+ 
+  
+<div class="grid grid-cols-4 gap-4">
+ <div class="relative bg-slate-400 h-28">
+ 
+    <div id="bouncyCircle" class="absolute flex bottom-5 left-5  w-4  h-8" >k1</div>
+  
+ </div>
+ <div class="bg-slate-400 h-28">
+  <div class="w-full h-40 flex justify-center  relative">
+     <div id="circle" class="absolute  self-center  w-4  h-8" ></div>
+  </div>
 </div>
- <div class="w-full h-full flex justify-center bg-red-400 mt-20 ">
-<div class="w-5/6 h-full flex-col justify-center bg-red-300/20">
-<h1 class="text-center mt-5 text-white text-4xl">mo.js</h1>
-<div class="w-full h-40 flex justify-center mt-28 relative">
-  <div id="bouncyCircle" class="absolute justify-center  w-4  h-8" >k1</div>
-</div>
+ <div class="bg-slate-400 h-28">
+  <div class="w-full h-40 flex justify-center  relative">
+    <div id="circle" class="absolute justify-center  w-4  h-8" ></div>
+  </div>
+ </div>
+ <div class="bg-slate-400 h-28">
 
-
-
-
-<div class="w-full h-40 flex justify-center  relative">
-  <div id="circle" class="absolute justify-center  w-4  h-8" ></div>
-</div>
-
-
-
-<div class="w-full h-40 flex justify-center  relative">
-  <div id="test" class="absolute justify-center  w-4  h-8" >28</div>
-</div>
-
-
-
+ </div>
+ <div class="bg-slate-400 h-28">5</div>
+ <div class="bg-slate-400 h-28">6</div>
+ <div class="bg-slate-400 h-28">7</div>
+ <div class="bg-slate-400 h-28">7</div>
+ <div class="bg-slate-400 h-28">7</div>
+  <div>09</div>
 </div>
 <div class="w-full h-80">3</div>
 <div>4</div>
