--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="https://prismjs.com/themes/prism.css">
 	<link rel="stylesheet" href="https://prismjs.com/plugins/line-numbers/prism-line-numbers.css">
 	<link rel="stylesheet" href="prism-live.css">
-	<link rel="stylesheet" href="style.css">
+	<link rel="stylesheet" href="./style.css">
     <title>Document</title>
 </head>
  <body class="p-5">
