create new Array CodeAnimeJs

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
    <a class="w-1/5 hover:text-black hover:bg-white/30 hover:cursor-pointer hover:underline decoration-dotted decoration-red-600">heartBeat</a>
 </div>             
  <div class="flex j5ustify-center p-2 border border-dashed text-center text-white bg-slate-300/20 divide-x">
-   <a class="w-1/5 hover:text-black hover:bg-white/30 hover:cursor-pointer hover:underline decoration-dotted decoration-red-600"">backInDown</a>
+   <a class="w-1/5 hover:text-black hover:bg-white/30 hover:cursor-pointer hover:underline decoration-dotted decoration-red-600">backInDown</a>
    <a class="w-1/5 hover:text-black hover:bg-white/30 hover:cursor-pointer hover:underline decoration-dotted decoration-red-600">backInLeft</a>
    <a class="w-1/5 hover:text-black hover:bg-white/30 hover:cursor-pointer hover:underline decoration-dotted decoration-red-600">backInRight</a>
    <a class="w-1/5 hover:text-black hover:bg-white/30 hover:cursor-pointer hover:underline decoration-dotted decoration-red-600">backInUp</a>
