create Fix bug close source Code

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <title>Document</title>
 </head>
  <body class="p-5">
+   
    <!--?----------------------------------------------------------------------- -->
    <!--*------------------------------ Start_tite_svg ------------------------------- -->
    <!--?----------------------------------------------------------------------- -->
@@ -42,7 +43,7 @@
 <!--TODO----------------------------------------------------------------------- -->
 
 <!--? ----------------------------------------------------------------------- -->
-<!--TODO ----------------------------- installing ------------------------------ -->
+<!--TODO -------------------- installing-Animate.css ------------------------ -->
 <!--? ----------------------------------------------------------------------- -->
 <div class="flex  justify-center mt-4">
   
@@ -66,7 +67,7 @@
 <!--TODO ------------------------- TheEnd_installing ------------------------ -->
 <!--? ----------------------------------------------------------------------- -->
 <!--?----------------------------------------------------------------------- -->
-<!--*-------------------------- Start_Animate.Css -------------------------- -->
+<!--*-------------------------- Svg_Animate.Css -------------------------- -->
 <!--?----------------------------------------------------------------------- -->
 <div id="animateCss"  class="flex justify-center  font-body ">
    <svg  id="animateCss"   viewBox="0 0 250 76" xmlns="http://www.w3.org/2000/svg" xmlns:svg="http://www.w3.org/2000/svg" class="animateCss animate__animated">
@@ -88,10 +89,9 @@
  <!--*----------------------------------------------------------------------- -->
  <!--!------------------------- TheEnd_Animate.Css -------------------------- -->
  <!--*----------------------------------------------------------------------- -->
-
  <br>
  <!--TODO----------------------------------------------------------------------- -->
-<!--?-------------------------- View_moveAnimate --------------------------- -->
+<!--?-------------------------- View_Code-Animate.css --------------------------- -->
 <!--TODO----------------------------------------------------------------------- -->
    <div class=" flex justify-center ">
       <div class="p-2 bg-yellow-400 shadow-lg shadow-yellow-400/50  bg-opacity-10">
@@ -102,7 +102,7 @@
 <!--?------------------------ TheEnd_View_moveAnimate ------------------------ -->
 <!--TODO----------------------------------------------------------------------- -->
 <!--!----------------------------------------------------------------------- -->
-<!--*-------------------------- list_move_animate --------------------------- -->
+<!--*-------------------------- list_move_animate.css --------------------------- -->
 <!--!----------------------------------------------------------------------- -->
 <div class="flex justify-start mt-12">
    <div class=" ring-lime-50  border bg-gradient-to-r from-red-600/5 via-red-600/20 to-red-600/5  hover:from-red-600/20 hover:via-red-600/5 hover:to-red-600/20 p-2 border-dotted bg-red-400/5 border-red-300">
@@ -189,41 +189,15 @@
 <!--? ----------------------------------------------------------------------- -->
 
  <!--? ----------------------------------------------------------------------- -->
-<!--TODO ------------------------- svgAnimeJsMove ------------------------ -->
+<!--TODO ------------------------- svgAnimeJs------------------------ -->
 <!--? ----------------------------------------------------------------------- -->
-
-<!--! source Code-->
-<!-- <div class="relative div flex z-50 justify-center">
-   <div id="innerSourceCodeAnimeJs" class="relative flex p-2   w-3/4 h-42 z-10 animate__animated animate__zoomInDown bg-slate-200/30 border-8 ring ring-rose-500  border-double">
-    <div class="w-2/4 p-2 bg-rose-600/20 text-white h-auto">
-       <h2 class="text-white"><<span class="text-yellow-600">div</span> <span class="text-yellow-400"> class=</span>"<span class="text-green-700">function-based-params-demo</span>"> 
-          <h2 class="text-white"><<span class="text-yellow-600">div</span> <span class="text-yellow-400"> class=</span>"<span class="text-green-700">el</span>">   <<span class="text-yellow-600">/div</span>></h2>
-          <h2 class="text-white"><<span class="text-yellow-600">div</span> <span class="text-yellow-400"> class=</span>"<span class="text-green-700">el</span>"> 
-             <<span class="text-yellow-600">/div</span>></h2>
-          <<span class="text-yellow-600">/div</span>></h2>
-    </div>
-    <div class="w-2/4 bg-rose-600/20 text-xs h-auto">
-       <pre><span class="text-blue-800">anime</span>({
-     <span class="text-green-600"> targets:</span> <span class="text-yellow-400">'.function-based-params-demo .el'</span>,
-     <span class="text-green-600">translateX:</span><span class="text-yellow-400"> 270,</span>
-     <span class="text-green-600">direction:</span> <span class="text-yellow-400">'alternate',</span>
-     <span class="text-green-600">loop:</span><span class="text-yellow-400"> true,</span>
-     <span class="text-blue-600">delay:</span> <span class="text-yellow-400">function(el, i, l) {</span>
-      <span class="text-green-600"></span><span class="text-purple-700"> return</span> i * 100;
-     <span class="text-yellow-400">},</span>
-     <span class="text-blue-600">endDelay:</span><span class="text-yellow-400">function(el, i, l) {</span>
-      <span class="text-purple-700"> return</span> (l - i) * 100;
-     <span class="text-blue-600">}</span> }); </pre>
-    </div>
-     </div>
-  </div> -->
-
-<!--! source Code-->
-
 <!--!  title sourceCode -->
+<div id="container-AnimateJs">
 <div class="w-full h-96">
 <div class="mb-1 ">
+
    <div class="flex mb-4 justify-center">
+<svg id="Code-svgAnimateJs" class="cursor-pointer" xmlns="http://www.w3.org/2000/svg"  viewBox="0 0 48 48" width="48px" height="48px"><path fill="#F44336" d="M21.5 4.5H26.501V43.5H21.5z" transform="rotate(45.001 24 24)"/><path fill="#F44336" d="M21.5 4.5H26.5V43.501H21.5z" transform="rotate(135.008 24 24)"/></svg>
       <div class=" ring-lime-50  border bg-gradient-to-r from-red-600/5 via-red-600/20 to-red-600/5  hover:from-red-600/20 hover:via-red-600/5 hover:to-red-600/20 p-2 border-dotted bg-red-400/5 border-red-300">
          <h1 class="text-red-600 text-3xl font-body">source Code AnimateJS</h1>
       </div>
@@ -232,20 +206,18 @@
 
 <!--!  title sourceCode -->
 <div class="w-full h-5/6"> 
-<div class=" flex justify-center relative w-full h-full divMenuAnimeJs">
+<div id="container-Svg-AnimeJs" class=" flex justify-center relative w-full h-full divMenuAnimeJs">
    <div class="absolute w-5/6 h-5/6 flex justify-center divAnimateJs animate__animated">
       <svg class="w-full" viewBox="100 0 245 100" xmlns="http://www.w3.org/2000/svg">
          <defs></defs>
          <text class="animate_js  animate__animated" style="fill: rgb(235, 14, 14); font-family:Distro Extinct; stroke: rgb(124, 132, 97); stroke-dasharray: 30px; stroke-dashoffset: -50px; stroke-opacity: 0.53; stroke-width: 0.756387px; white-space: pre;" transform="matrix(4.114889, 0, 0, 3.817554, -392.250885, -53.289532)" x="119.835" y="32.323">AnimeJs</text>
        </svg>
 </div>
-
 </div>
 </div>
  <!--? ----------------------------------------------------------------------- -->
-<!--TODO ----------------------- TheEnd_svgAnimeJsMove --------------------- -->
+<!--TODO ----------------------- TheEnd_svg-AnimeJs --------------------- -->
 <!--? ----------------------------------------------------------------------- -->
-
 </div>
 
  <!--? ----------------------------------------------------------------------- -->
@@ -257,7 +229,7 @@
       <div class="snap-center shrink-0">
          <div class="w-10 h-8"> </div>
       </div> 
-     <!-- animejs-1 -->
+     <!--* animejs-1 -->
       <div id="animejs-1" class="snap-center shrink-0  flex demo-content function-based-params-anime-js">
          <div class="snap-start w-20 h-20"></div>
          <div class="menuAnimeJs w-80 h-40  flex justify-center flex-col  shadow-lg shadow-rose-700 rounded-lg space-y-2  shrink-0  bg-rose-500 line">
@@ -382,8 +354,7 @@
             </div>
          </div>
        </div>
-       <!--  <div class="w-4 h-4 bg-white  self-center rounded-full  el"></div> -->
-      <!-- anime-js-2 -->
+      <!--* anime-js-2 -->
       <div id="animejs-2" class="function-based-values-demo">
       <div class="snap-center shrink-0">
        <div class="menuAnimeJs w-80 h-40  flex  justify-center flex-col shrink-0 shadow-lg shadow-blue-700 rounded-lg space-y-2 bg-blue-400 line">
@@ -425,7 +396,6 @@
                     </g>
                   </g>
                 </svg>
-
             </div>
             <div class="w-3/4 mx-auto h-8 flex bg-red-50/30 rounded-md"><svg class="self-center" width="50px" height="50px" viewBox="0 -18.5 64 64" xmlns="http://www.w3.org/2000/svg">
                <g id="Group_194" data-name="Group 194" transform="translate(-188 -821.409)">
@@ -498,17 +468,14 @@
                     </g>
                   </g>
                 </svg>
-
             </div>
        </div>
       </div>
       </div>
 
-      <!-- anime-js-3 -->
+      <!--* anime-js-3 -->
       <div id="animejs-3" class="snap-center shrink-0">
-
          <div class="menuAnimeJs w-80 h-40  flex items-center rounded-lg shadow-xl shadow-yellow-500 shrink-0  bg-yellow-400">
-            <!-- <div class="w-3/4 mx-auto h-28 css-transforms-demo flex bg-red-50/30 rounded-md"><div class="w-8 h-8 bg-white self-center rounded-full  el"></div></div> -->
             <div class="w-3/4 h-28 bg-white/20 mx-auto demo-content promise-demo">
               <div class="logs">
                 <div class="circle shadow"></div>
@@ -518,15 +485,11 @@
                 <input class="bg-yellow-300/20  log finished-log">
               </div>
               </div>
-              
             </div>
-                  
          </div>
       </div>
-
-      <!-- anime-js-4 -->
-      <div id="animejs-4" class="snap-center ...">
-
+      <!--* anime-js-4 -->
+      <div id="animejs-4" class="snap-center">
          <div class="menuAnimeJs flex items-center  justify-center w-80 h-40 rounded-lg shadow-xl  shrink-0  bg-green-400">
             <div class="motion-path-demo bg-red-50/30">
                  <div class="w-5 h-5 bg-white el follow-path"></div>
@@ -536,11 +499,8 @@
              </div>
          </div>
       </div>
-
-
-      <!-- anime-js-5 -->
-
-      <div class="snap-center ...">
+      <!-- * anime-js-5 -->
+      <div class="snap-center">
          <div id="animejs-5" class="menuAnimeJs w-80 h-40 rounded-lg shadow-xl  shrink-0  bg-white">
             <div class="demo-content staggering-grid-demo">
                <div class="grid grid-cols-12 bg-gray-600">
@@ -714,10 +674,10 @@
                  <div class="small square"></div>
                </div>
              </div>
-
          </div>
       </div>
-       <div id="animejs-6" class="snap-center ...">
+      <!--* AnimeJs-6-->
+       <div id="animejs-6" class="snap-center">
             <div class="menuAnimeJs w-80 h-40 seek-anim-demo flex justify-center flex-col  shadow-lg shadow-rose-700 rounded-lg space-y-2  shrink-0  bg-rose-500 line">
                <div class="w-3/4 mx-auto h-8 flex bg-red-50/30 rounded-md">
                   <svg class="el self-center" width="50px" height="50px" viewBox="0 -15 64 64" xmlns="http://www.w3.org/2000/svg">
@@ -845,6 +805,7 @@
                 </div>
                 </div> 
     </div>
+    <!--* AnimeJs-7-->
 <div id="animejs-7" class="snap-center ...">
 
 <div class="menuAnimeJs w-80 h-40  flex items-center rounded-lg shadow-xl shadow-yellow-500 shrink-0  bg-yellow-400">
@@ -863,15 +824,15 @@
    </div>
  </div>
  </div>
- <!--? ----------------------------------------------------------------------- -->
-<!--TODO ----------------------- TheEnd_Sample_move_AnimeJs --------------------- -->
-<!--? ----------------------------------------------------------------------- -->
+</div>
+<!--! ----------------------------------------------------------------------- -->
+<!--TODO ------------------- TheEnd_Sample_move_AnimeJs --------------------- -->
+<!--! ----------------------------------------------------------------------- -->
 <!--?----------------------------------------------------------------------- -->
-<!--*----------------------------- Start_mo.js ----------------------------- -->
+<!--*----------------------------- Install Mo.js ----------------------------- -->
 <!--?----------------------------------------------------------------------- -->
 <br>
 <br>
-
 <div class="flex justify-center ">
    <div class="w-3/4 m-2 p-3 border border-dashed bg-white bg-opacity-10">
 
@@ -890,10 +851,13 @@
    <h1 id="titleMo.js" class="self-center text-5xl text-center p-5 font-bold text-green-700">Mo.js</h1>
    <div id="moveMoJs2" class="self-start text-4xl font-bold font-family  text-white" ><==</div>
  </div>
- 
-  
+<!--?----------------------------------------------------------------------- -->
+<!--*----------------------------- List Mo.js ----------------------------- -->
+<!--?----------------------------------------------------------------------- -->
 <div class="grid grid-cols-4 gap-4  bg-red-50/30  border-2 border-dashed  outline-d outline-offset-2 outline-1  p-6 ">
+
  <div class="relative bg-black/20 h-28 ">
+<svg  class="w-8 h-8  cursor-pointer" id="Layer_1" style="enable-background:new 0 0 512 512;" version="1.1" viewBox="0 0 512 512" width="512px" xml:space="preserve" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"><g><g><path d="M160,160h192c-1.7-20-9.7-35.2-27.9-40.1c-0.4-0.1-0.9-0.3-1.3-0.4c-12-3.4-20.8-7.5-20.8-20.7V78.2    c0-25.5-20.5-46.3-46-46.3c-25.5,0-46,20.7-46,46.3v20.6c0,13.1-8.8,17.2-20.8,20.6c-0.4,0.1-0.9,0.4-1.4,0.5    C169.6,124.8,161.9,140,160,160z M256,64.4c7.6,0,13.8,6.2,13.8,13.8c0,7.7-6.2,13.8-13.8,13.8c-7.6,0-13.8-6.2-13.8-13.8    C242.2,70.6,248.4,64.4,256,64.4z"/><path d="M404.6,63H331v14.5c0,10.6,8.7,18.5,19,18.5h37.2c6.7,0,12.1,5.7,12.4,12.5l0.1,327.2c-0.3,6.4-5.3,11.6-11.5,12.1    l-264.4,0.1c-6.2-0.5-11.1-5.7-11.5-12.1l-0.1-327.3c0.3-6.8,5.9-12.5,12.5-12.5H162c10.3,0,19-7.9,19-18.5V63h-73.6    C92.3,63,80,76.1,80,91.6V452c0,15.5,12.3,28,27.4,28H256h148.6c15.1,0,27.4-12.5,27.4-28V91.6C432,76.1,419.7,63,404.6,63z"/></g><rect height="16" width="112" x="144" y="192"/><rect height="16" width="160" x="144" y="288"/><rect height="16" width="129" x="144" y="384"/><rect height="16" width="176" x="144" y="336"/><rect height="16" width="208" x="144" y="240"/></g></svg>
     <div id="bouncyCircle" class="absolute top-10 left-1/2  w-4  h-8" ></div>
  </div>
 
@@ -968,6 +932,7 @@
 
 
 <div id="js-logo" class="logo"></div>
+
 
 <!-- 
 </div>
