finesh anmiaton  mo.js

--- a/index.html
+++ b/index.html
@@ -1159,9 +1159,7 @@ document.querySelector('#mojs9').addEventListener('click', (e)=> {  console.log(
 // </div> -->
 
 
-  <script src="./src/prismMini.js">
-  
-  </script>
+  <script src="./src/prismMini.js"> </script>
 <!--TODO ------------ library_MoJS ---------------- -->
 <script src="https://cdn.jsdelivr.net/npm/@mojs/core"></script>
 <!--TODO ------------ library_animeJs ---------------- -->
