--- a/index.html
+++ b/index.html
@@ -1095,8 +1095,18 @@ document.querySelector('#mojs9').addEventListener('click', (e)=> {  console.log(
 
 });
 </code></pre>
+</div>
+<div class="flex justify-center ">
+   <div class="w-3/4 m-2 p-3 border border-dashed bg-white bg-opacity-10">
 
-
+<h2 class="text-rose-500 p-2 text-2xl">installing GSAP</h2> 
+<h2 class="text-white ">npm install gasp</h2>
+<h2 class="text-rose-300 text-2xl">or</h2> 
+<h2 class="text-white">yarn add gasp </h2>
+<h2 class="text-white">import { gsap } from "gsap"</h2>
+<h2 class="text-rose-300 text-2xl">or</h2> 
+</div>
+</div>
  <!-- <div class="bg-slate-400 h-28"> </div>
  <div id="mojs-div" class="bg-slate-600/20 h-44">5</div>
  <div class="bg-slate-600/20 h-44">6</div>
@@ -1112,53 +1122,6 @@ document.querySelector('#mojs9').addEventListener('click', (e)=> {  console.log(
 
 
 <div id="js-logo" class="logo"></div>
-
-
-<!-- 
-</div>
-</div>
-
-
- </div>
-  -->
-
-<!-- 
-    ///===========
-
-//====
-//     <div id="menuCodeAnimeJs" class="flex justify-center">
-//       <div class="w-10 h-4 bg-slate-50"></div>
-//  <div class="relative flex bottom-56 w-3/4 h-52 animate__animated animate__zoomInDown bg-slate-200/30 border-8 ring ring-rose-500  border-double">
-
-//    <div id="titleCode" class="flex justify-start mt-12">
-//       <div class=" ring-lime-50  border bg-gradient-to-r from-red-600/5 via-red-600/20 to-red-600/5  hover:from-red-600/20 hover:via-red-600/5 hover:to-red-600/20 p-2 border-dotted bg-red-400/5 border-red-300">
-//          <h1 class="text-red-600 text-3xl font-body">list move animation</h1>
-//       </div>
-//    </div>
-
-// <div class="w-2/4  bg-rose-600/80 text-white h-auto">
-//    <h2 class="text-white"><<span class="text-yellow-600">div</span> <span class="text-yellow-400"> class=</span>"<span class="text-green-700">function-based-params-demo</span>"> 
-//       <h2 class="text-white"><<span class="text-yellow-600">div</span> <span class="text-yellow-400"> class=</span>"<span class="text-green-700">el</span>">   <<span class="text-yellow-600">/div</span>></h2>
-//       <h2 class="text-white"><<span class="text-yellow-600">div</span> <span class="text-yellow-400"> class=</span>"<span class="text-green-700">el</span>"> 
-//          <<span class="text-yellow-600">/div</span>></h2>
-//       <<span class="text-yellow-600">/div</span>></h2>
-// </div>
-// <div class="w-2/4 bg-rose-600/80 text-xs h-auto">
-//    <pre><span class="text-blue-800">anime</span>({
-//  <span class="text-green-600"> targets:</span> <span class="text-yellow-400">'.function-based-params-demo .el'</span>,
-//  <span class="text-green-600">translateX:</span><span class="text-yellow-400"> 270,</span>
-//  <span class="text-green-600">direction:</span> <span class="text-yellow-400">'alternate',</span>
-//  <span class="text-green-600">loop:</span><span class="text-yellow-400"> true,</span>
-//  <span class="text-blue-600">delay:</span> <span class="text-yellow-400">function(el, i, l) {</span>
-//   <span class="text-green-600"></span><span class="text-purple-700"> return</span> i * 100;
-//  <span class="text-yellow-400">},</span>
-//  <span class="text-blue-600">endDelay:</span><span class="text-yellow-400">function(el, i, l) {</span>
-//   <span class="text-purple-700"> return</span> (l - i) * 100;
-//  <span class="text-blue-600">}</span>
-//    }); </pre>
-// </div> -->
-
-
   <script src="./src/prismMini.js"> </script>
 <!--TODO ------------ library_MoJS ---------------- -->
 <script src="https://cdn.jsdelivr.net/npm/@mojs/core"></script>
