--- a/index.html
+++ b/index.html
@@ -1136,6 +1136,11 @@ document.querySelector('#mojs9').addEventListener('click', (e)=> {  console.log(
   <div class="block red-left w-32 h-32 rounded-2xl ring-2 ring-red-950 bg-rose-600"></div>
   <div class="block violet-right w-32 h-32 rounded-2xl ring-2 ring-violet-950 bg-violet-700"></div>
   </div>
+
+  <div class=" flex items-center justify-around h-44 mt-5 bg-zinc-50/15 overflow-hidden">
+  <div class="block red-linear w-32 h-32 rounded-2xl ring-2 ring-lime-950 bg-lime-600">linear</div>
+  <div class="block violet-bounce w-32 h-32 rounded-2xl ring-2 ring-yellow-950 bg-yellow-400">bounce</div>
+  </div>
   
 
  <!-- <div class="bg-slate-400 h-28"> </div>
