--- a/index.html
+++ b/index.html
@@ -1165,7 +1165,7 @@ document.querySelector('#mojs9').addEventListener('click', (e)=> {  console.log(
 <script src="./node_modules/animejs/lib/anime.min.js"></script>
 <!--?----------------- TheEnd library -------------------- -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"></script>
-<script src="./app.js"></script>
+<script src="./dist2/app.js"></script>
 
 
 
