--- a/index.html
+++ b/index.html
@@ -1100,7 +1100,7 @@ document.querySelector('#mojs9').addEventListener('click', (e)=> {  console.log(
    <div class="w-3/4 m-2 p-3 border border-dashed bg-white bg-opacity-10">
 
 <h2 class="text-rose-500 p-2 text-2xl">installing GSAP</h2> 
-<h2 class="text-white ">npm install gasp</h2>
+<h2 class="text-white ">npm install gsap</h2>
 <h2 class="text-rose-300 text-2xl">or</h2> 
 <h2 class="text-white">yarn add gasp </h2>
 <h2 class="text-white">import { gsap } from "gsap"</h2>
@@ -1108,7 +1108,8 @@ document.querySelector('#mojs9').addEventListener('click', (e)=> {  console.log(
 </div>
 </div>
 
-
+<button id="btnGsap-1" class=" h-16 p-5 bg-orange-200 ring-2 border ring-orange-300">click Animate-GSAP 1</button>
+<button id="btnGsap-2" class=" h-16 p-5 bg-orange-200 ring-2 border ring-orange-300">click Animate-GSAP 2</button>
 <div class=" flex items-center justify-between h-44 mt-5 bg-zinc-50/15 overflow-hidden">
 <div class="block box-left w-32 h-32 rounded-lg bg-green-400"></div>
 <div class="block box-right w-32 h-32 rounded-lg bg-red-400"></div>
